--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -188,6 +188,9 @@
     <!-- Dummy data: model of item -->
     <string name="toast_out_of_stock_msg">Product is out of stock!</string>
 
+    <string name="linktosite">
+        <a href="https://github.com/Don1k1337">Contact Dev by this link</a>
+    </string>
 
 </resources>
 
